[package]
name = "plaintext_wasm"
version = "0.1.0"
authors = ["gustin <gustin@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
curve25519-dalek = "1.2.3"
ed25519-dalek = "1.0.0-pre.1"
rand_os = "0.1.3"
sha3 = "0.8.2"
wasm-bindgen = "0.2"

[dependencies.opaque]
features = ["nightly"]
path = "../opaque"

