[package]
name = "plaintext_wasm"
version = "0.1.0"
authors = ["gustin <gustin@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
aes-gcm-siv = "0.2.1"
bincode = "1.2.0"
console_error_panic_hook = "0.1.1"
curve25519-dalek = "1.2.3"
ed25519-dalek = "1.0.0-pre.1"
hex = "0.4.0"
hkdf = "0.8.0"
hmac = "0.7.1"
rand_os = "0.1.3"
sha2 = "0.8.0"
sha3 = "0.8.2"
wasm-bindgen = "0.2"
typenum = "1.11.2"

[dependencies.opaque]
features = ["nightly"]
path = "../opaque"

